--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="flex h-full flex-col">
+	<body data-sveltekit-preload-data="hover" class="grid grid-rows-[auto_1fr] h-full max-h-full">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
